# ros2-RC24-R2

./: .gitignore  .gitmodules  README.md  install.sh  urg_node.yaml
RANSAC_localization/: CMakeLists.txt  package.xml
RANSAC_localization/rviz/: laser.rviz  self_localization.rviz
RANSAC_localization/src/: RANSAC_localization.cpp  detect_circles.cpp  detect_lines.cpp  pose_fuser.cpp
bocbot/: CMakeLists.txt  package.xml
bocbot/launch/: NHK23_court.launch.py  RC23_coat.launch.py  world.launch.py
bocbot/urdf/: bocbot.gazebo  bocbot.urdf  bocbot.urdf.xacro
bocbot/worlds/: NHK23_court.world  RC23_coat.world  boc_office.world
controller_interface/: CMakeLists.txt  package.xml
controller_interface/include/controller_interface/: Gamebtn.hpp  config.hpp  controller_interface_node.hpp  heartbeat_interface_node.hpp  send_udp.hpp  super_command.hpp  unity_interface_node.hpp  visibility_control.h
controller_interface/src/: Gamebtn.cpp  controller_interface_node.cpp  controller_interface_node_main.cpp  heartbeat_interface_node.cpp  send_udp.cpp  super_command.cpp  unity_interface_node.cpp
controller_interface_msg/: CMakeLists.txt  package.xml
controller_interface_msg/msg/: BaseControl.msg  Colorball.msg  Convergence.msg  Injection.msg  Pad.msg  RemainingRing.msg  RobotControl.msg  RobotControll.msg  SubPad.msg  SubScrn.msg
controller_pkg/: CMakeLists.txt  package.xml
controller_pkg/include/controller_pkg/: controller_pkg_node.hpp  visibility_control.h
controller_pkg/msg/: SubButton.msg
controller_pkg/src/: controller_pkg_node.cpp
detection_interface/: CMakeLists.txt  package.xml
detection_interface/include/detection_interface/: coordinate_transformation.hpp  detection_interface_node.hpp  visibility_control.h
detection_interface/src/: coordinate_transformation.cpp  detection_interface_node.cpp
detection_interface_msg/: CMakeLists.txt  package.xml
detection_interface_msg/msg/: ArmParam.msg  SiroParam.msg  Threshold.msg  VisualizerC1.msg  VisualizerRealsense.msg
ditaction_interface/: CMakeLists.txt  package.xml
ditaction_interface/src/: coordinate_transformation.cpp  ditaction_interface_node.cpp
ditaction_interface_msg/: CMakeLists.txt  package.xml
ditaction_interface_msg/msg/: SiroParam.msg
gazebo_simulator/: CMakeLists.txt  package.xml
gazebo_simulator/include/gazebo_simulator/: planar_bot_converter.hpp
gazebo_simulator/launch/: NHK23_ER.launch.py  NHK23_RR.launch.py  NHK23_swerve.launch.py  NHK24_R1.launch.py  NHK24_R2.launch.py  office_swerve.launch.py
gazebo_simulator/models/NHK23_court/: model.config  model.sdf
gazebo_simulator/models/NHK23_court/meshes/: NHK23_court.stl
gazebo_simulator/src/: planar_bot_converter.cpp
gazebo_simulator/urdf/: er.urdf.xacro  rr.urdf.xacro  sensors.gazebo  swerve_bot.gazebo  swerve_bot.urdf.xacro
gazebo_simulator/worlds/: NHK23_court.world
icp_base_slam/: CMakeLists.txt  package.xml
icp_base_slam/config/: config.yaml
icp_base_slam/include/icp_base_slam/: config.hpp  dynamic_voxel_grid_filter.hpp  icp_base_slam.hpp  pose_fuser.hpp  ransac_lines.hpp  scan.hpp  vector_to_PC2.hpp  visibility.h
icp_base_slam/rviz/: self_localization.rviz
icp_base_slam/src/: dynamic_voxel_grid_filter.cpp  icp_base_slam.cpp  pose_fuser.cpp  ransac_lines.cpp
injection_interface/: CMakeLists.txt  package.xml
injection_interface/config/: polelist.cfg
injection_interface/include/injection_interface/: injection_interface_node.hpp  visibility_control.h
injection_interface/src/: injection_interface_node.cpp
injection_interface_msg/: CMakeLists.txt  package.xml
injection_interface_msg/msg/: InjectionCommand.msg
injection_param_calculator/: CMakeLists.txt  package.xml
injection_param_calculator/include/injection_param_calculator/: injection_param_calculator.hpp  my_visibility.h
injection_param_calculator/src/: injection_param_calculator.cpp
main_executor/: CMakeLists.txt  package.xml
main_executor/config/: config.yaml  main_params.yaml
main_executor/config/ransac_localization/: lines.cfg  lines_blue.cfg  lines_red.cfg
main_executor/config/sequencer/: silo_priority.cfg
main_executor/config/spline_pid/: R1_edgelist.cfg  R1_nodelist.cfg  R2_edgelist.cfg  R2_nodelist.cfg  R2_straight_nodelist.cfg  edgelist.cfg  nodelist.cfg
main_executor/launch/: main_exec.launch.py
main_executor/src/: main.cpp
mcl_2d/: CMakeLists.txt  package.xml
mcl_2d/include/mcl_2d/: mcl.h  mcl_2d_node.hpp  visibility_control.h
mcl_2d/include/odom_printer/: odom_printer.hpp
mcl_2d/mcl/: mcl.cpp  mcl.h
mcl_2d/src/: mcl.cpp  mcl_2d_node.cpp  odom_printer.cpp  tool.cpp
mcl_2d/tool/: tool.h
my_messages/: CMakeLists.txt  package.xml
my_subscriber/: CMakeLists.txt  package.xml
my_subscriber/src/: my_subscriber.cpp
odom_delay/: CMakeLists.txt  package.xml
odom_delay/src/: odom_delay.cpp  odom_delay.hpp
path_msg/: CMakeLists.txt  package.xml
path_msg/msg/: Path.msg
pcl_localization/: CMakeLists.txt  README.md  package.xml
pcl_localization/launch/: pcl_localization.launch.py
pcl_localization/param/: localization.yaml
pointcloud_to_Laserscan/: CMakeLists.txt  package.xml
ransac_localization/: CMakeLists.txt  package.xml
ros2_laser_merger/: CMakeLists.txt  package.xml
ros2_laser_scan_merger/: CMakeLists.txt  package.xml
sequencer/: CMakeLists.txt  package.xml
sequencer/include/sequencer/: sequencer_node.hpp  visibility_control.h
sequencer/src/: sequencer_node.cpp
socketcan_interface/: CMakeLists.txt  package.xml
socketcan_interface_msg/: package.xml
spline_pid/: CMakeLists.txt  package.xml
spline_pid/config/: edgelist.txt  nodelist.txt
spline_pid/include/spline_pid/: spline_pid_node.hpp  visibility_control.h
spline_pid/msg/: Path.msg
spline_pid/scripts/: R1_trajectories.py  R2_trajectories.py  dijkstra_waypoints.py  path_plot.py  pycubicspline.py  spline_trajectories.py
spline_pid/spline_pid/: import_module.py
spline_pid/src/: spline_pid_node.cpp
stea_description/: package.xml  setup.cfg  setup.py
utilities/: CMakeLists.txt  package.xml
utilities/src/: can_utils.cpp  (+4 more)
(+94 files in other folders)
