<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controller_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="c1103441@planet.kanazawa-it.ac.jp">ryoko</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>utilities</depend>
  <depend>socketcan_interface</depend>
  <depend>socketcan_interface_msg</depend>
  <depend>controller_interface_msg</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
