<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>injection_param_calculator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="c1112993@planet.kanazawa-it.ac.jp">fuchigami</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>injection_interface_msg</depend>
  <depend>socketcan_interface_msg</depend>
  <depend>utilities</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
